# global-data-tool

./: .gitignore  README.md  RELEASE_NOTES.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  check.yml
scripts/: build_db.py  download.py
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs  timecalc.rs
src/components/: CityCard.vue  CityDetail.vue  CityTimePage.vue  ContextMenuProvider.vue  CurrencyPage.vue  ResultList.vue  SearchBox.vue  SideTab.vue  TimezoneConverter.vue
src/styles/: main.css
src/types/: index.ts
src/utils/: currencies.ts  time.ts
